new way to deal with replies
